<resources>
    <string name="app_name">Unicah App</string>

    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Cerrar Menu</string>

    <string name="action_settings">Configuraciones</string>

    <string name="txtRec">Hoy</string>
    <string name="txtAnun">Anuncios</string>
    <string name="txtNoti">Noticias</string>

    <string name="unicah_intro">
        Creada de acuerdo al derecho canónico en junio de 1992,
        fue autorizada oficialmente el 04 de diciembre del mismo año e inicio sus actividades académicas el 03 de febrero de 1993,
        fiesta en honor a la Virgen de Suyapa, patrona de Honduras, en las instalaciones del antiguo seminario menor de San José.
        La Universidad Católica De Honduras, Nuestra Señora Reina de la Paz, es una institución de educación superior que pertenece a
        la iglesia católica y se rige tanto por el derecho canónico como por las leyes de Honduras.
    </string>

     <string name="campus_sanpedro">
        Ubicado en la capital industrial del país San Pedro Sula, el campus San Pedro y San Pablo es el segundo campus más
         gran de la Universidad Católica de Honduras. Dentro de la extensa oferta de carreras podemos encontrar: Ciencias de la
         Salud, Ciencias Sociales, Ingenierías, Licenciaturas.
    </string>

     <string name="campus_sanpedro_telefono">
           2540-3030.
           5436-9090.
    </string>

         <string name="campus_sanpedro_email">
           unicah@unicah.edu.
    </string>

     <string name="campus_sanpedro_address">
           Colonia Zerón
           San Pedro Sula.
    </string>

    <string name="computacion_intro">
        Es un modo de enfoque interdisciplinario que permite estudiar y comprender la realidad, con el propósito de implementar u optimizar sistemas complejos.
        Puede también verse como la aplicación tecnológica de la teoría de sistemas a los esfuerzos de la ingeniería, adoptando en todo este trabajo el paradigma sistémico.
        La ingeniería de ciencias de la computación integra otras disciplinas y grupos de especialidad en un esfuerzo de equipo, formando un proceso de desarrollo centrado.
    </string>
    <string name="computacion_futuro">
        El Ingeniero en Ciencias de la Computación esta en capacidad de desarrollarse en empresas de cualquier ámbito como:
    </string>
    <string name="becacompleta">
        Esta beca se le otorga al recien graduado, que haya obtenido el primer lugar en su promoción de secundaria
        y que ingrese a la UNICAH en el primer periodo de clases inmediatamente.
    </string>

    <string name="mediabeca">
        Esta beca es para personas de bajos recursos económicos comprobados, cubre el 100% de la mensualidad
        financiada por la UNICAH y reembolsable por el beneficiario 4 meses despues de su graduación mediante un plan de pagos.
    </string>

    <string name="parciales">
        Este descuento es para padres de familia que poseen 3 o más hijos activos o graduados en la UNICAH,
        o si eres hijo de un empleado de la institucion.
    </string>

    <string name="postgrado">
        Esta beca es para personas de bajos recursos económicos comprobados,
        cubre el 100% de la mensualidad financiada por la UNICAH y reembolsable por el beneficiario 4
        meses despues de su graduación mediante un plan de pagos.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
