<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="unicah.unicahapp.frgCampusSanPedro">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:elevation="@dimen/cardview_default_elevation"
            >

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@mipmap/sanpedroysanpablo"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="San Pedro y San Pablo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="12sp"
                android:maxLines="4"
                android:ellipsize="end"
                android:text="@string/campus_sanpedro" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"
                android:text="LEER MAS" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="TELEFONOS:" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                >
                <TableRow>
                    <ImageView
                        android:id="@+id/imgbeca1"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_column="1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_call_black_24dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="40dp"
                        android:paddingBottom="10dp"
                        android:textSize="12sp"
                        android:ellipsize="end"
                        android:text="@string/campus_sanpedro_telefono"/>
                </TableRow>
                <TableRow>
                    <ImageView
                        android:id="@+id/imgbeca2"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_column="1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_markunread_black_24dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="40dp"
                        android:paddingBottom="10dp"
                        android:textSize="12sp"
                        android:ellipsize="end"
                        android:text="@string/campus_sanpedro_email"/>
                </TableRow>
                <TableRow>
                    <ImageView
                        android:id="@+id/imgbeca3"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_column="1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_location_on_black_24dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="40dp"
                        android:paddingBottom="10dp"
                        android:textSize="12sp"
                        android:ellipsize="end"
                        android:text="@string/campus_sanpedro_address"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
