<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="unicah.unicahapp.frgUnicah">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white"
            >

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@mipmap/virgen"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="UNICAH" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="12sp"
                android:maxLines="4"
                android:ellipsize="end"
                android:text="@string/unicah_intro" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"
                android:text="LEER MAS" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="Becas" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                >
                <TableRow>
                    <ImageView
                        android:id="@+id/imgbeca1"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_column="1"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/becaprimer1"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="40dp"
                        android:paddingBottom="10dp"
                        android:textSize="12sp"
                        android:ellipsize="end"
                        android:text="@string/becacompleta"/>
                </TableRow>
                <TableRow>
                    <ImageView
                        android:id="@+id/imgbeca2"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_column="1"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/becasegundo2"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="40dp"
                        android:paddingBottom="10dp"
                        android:textSize="12sp"
                        android:ellipsize="end"
                        android:text="@string/mediabeca"/>
                </TableRow>
                <TableRow>
                    <ImageView
                        android:id="@+id/imgbeca3"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_column="1"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/becatercero3"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="40dp"
                        android:paddingBottom="10dp"
                        android:textSize="12sp"
                        android:ellipsize="end"
                        android:text="@string/parciales"/>
                </TableRow>
                <TableRow>
                    <ImageView
                        android:id="@+id/imgbeca4"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_column="1"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/becacuarto4"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="40dp"
                        android:paddingBottom="10dp"
                        android:textSize="12sp"
                        android:ellipsize="end"
                        android:text="@string/postgrado"/>
                </TableRow>
            </TableLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="Descubre mas" />
            <TableLayout
                android:layout_height="80dp"
                android:layout_width="match_parent"
                android:weightSum="1.0">
            <TableRow
                android:layout_weight=".5"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/campuslink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/campus"
                    />
                <!--TextView
                    android:layout_below="@+id/campuslink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    /-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/school"
                    />
            </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
